[gd_scene load_steps=2 format=3 uid="uid://b133n0xdkmyty"]

[ext_resource type="Script" uid="uid://ckelctwcv44q" path="res://scripts/minigames/load/game_item.gd" id="1_qa5a5"]

[node name="GameItem" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_qa5a5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 95.0
offset_bottom = 95.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
